test_case/rust-lang_rust/16377_55306600.rs

pub trait Dimension {
   type IndexType;
}

// error: wrong number of type arguments: expected 1, found 0
// the error indicates the Dimension trait
pub trait RemoveAxis : Dimension { .. }
